2007-09-06  Jakub Steiner <jimmac@ximian.com>

	* status/folder-visiting.icon: fix emblem anchors to match the ones
		in folder.icon to avoid jumpiness. Bug #474165

2007-08-27  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Up version to 2.19.91 for release

2007-08-27  Rodney Dawes  <dobey.pwns@gmail.com>

	* scalable/emblems/Makefile.am: Add missing .icon.in files

	* */*/*.svg: inkscape -z --vacuum-defs

2007-08-27  Rodney Dawes  <dobey.pwns@gmail.com>

	* */places/Makefile.am: Include folder.icon if not already present
	
	* */places/folder.icon: Update emblem positioning and add missing sizes

2007-08-27  Lapo Calamandrei <calamandrei@gmail.com>

	* */actions/system-log-out.* : new icons from Kalle Persson.
	* {32x32,scalable}/categories/system-help.* : last missing bits to
		complete "categories".
	* */categories/*-other.* : tweaks.

2007-08-27  Jakub Steiner <jimmac@ximian.com>

	* */emblems/symbolic-link.*: distort the shape to make it
		more readable at the small resolution. Hopefully addreses bug #470260

2007-08-27  Jakub Steiner <jimmac@ximian.com>

	* {16x16,22x22,24x24}/categorie/preferences-other.*: fill in the
		missing sizes

2007-08-27  Rodney Dawes  <dobey.pwns@gmail.com>

	* */stock/generic/Makefile.am:
	* */stock/generic/stock_cell-phone.*:
	Remove "stock_cell-phone" as it is replaced with "phone"

2007-08-27  Lapo Calamandrei <calamandrei@gmail.com>

	* {32x32,scalable}/categories/preferences-other.* : new icons.
	* 32x32(categories/applications-utilities.* : tweaks.
	* 22x22/actions/appointment-new.* : fixed the slipped star.

2007-08-26  Lapo Calamandrei <calamandrei@gmail.com>

	* {32x32,scalable}/categories/preferences-system.* : better key.

2007-08-26  Rodney Dawes  <dobey.pwns@gmail.com>

	* */apps/Makefile.am:
	* */apps/image-viewer.*:
	Remove the old image-viewer icon as eog ships its own now

	Fixes #470391

2007-08-26  Lapo Calamandrei <calamandrei@gmail.com>

	* 32x32/actions/appointment-new.* : tweaks.
