@@ -1,3 +1,8 @@
+2007-09-13  Rodney Dawes  <dobey.pwns@gmail.com>
+
+	* index.theme.in: add missing directories for emotes
+	Original patch from Erwann Chenede <Erwann.Chenede@Sun.COM>
+
 2007-09-06  Jakub Steiner <jimmac@ximian.com>
 
 	* status/folder-visiting.icon: fix emblem anchors to match the ones
